test: add ParameterizedTypeReference for RestTemplate